<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="ir.alimahmoodvan.getfollower.SettingActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        app:title=""
        app:titleTextColor="@android:color/transparent"
        android:background="@color/colorToolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_height="?attr/actionBarSize">
    </android.support.v7.widget.Toolbar>
    <ProgressBar
        android:background="@color/colorInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/pbar"
        android:indeterminate="true"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorInfo"
        android:layout_height="200dp"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/source_btn"
                android:textSize="10sp"
                android:id="@+id/source_btn"
                android:background="@color/colorMenuButton"
                android:drawableTop="@drawable/source"
                android:drawablePadding="1dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                >
            </android.support.v7.widget.AppCompatButton>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/comment_btn"
                android:textSize="10sp"
                android:id="@+id/comment_btn"
                android:background="@color/colorMenuButton"
                android:drawableTop="@drawable/comment"
                android:drawablePadding="1dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                >
            </android.support.v7.widget.AppCompatButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/action_btn"
                android:textSize="10sp"
                android:id="@+id/action_btn"
                android:background="@color/colorMenuButton"
                android:drawableTop="@drawable/action"
                android:drawablePadding="1dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"                >
            </android.support.v7.widget.AppCompatButton>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/other_btn"
                android:textSize="10sp"
                android:id="@+id/other_btn"
                android:background="@color/colorMenuButton"
                android:drawableTop="@drawable/parameter"
                android:drawablePadding="1dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"                >
            </android.support.v7.widget.AppCompatButton>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSettingBody"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:id="@+id/scroll_view"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/source_lyt"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <com.hootsuite.nachos.NachoTextView
                    android:focusedByDefault="true"
                    app:chipBackground="@color/colorMenuButton"
                    app:chipTextColor="@color/colorWhite"
                    android:id="@+id/source_nacho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                      android:id="@+id/comment_lyt"
                      android:visibility="gone"
                      xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      xmlns:app="http://schemas.android.com/apk/res-auto"
                      android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/comment_add_btn"
                        android:background="@android:color/transparent"
                        android:src="@drawable/add_comment"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/comment_lyt_txt"
                        android:hint="@string/comment_input"
                        >
                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/comment_inp_txt"
                        android:inputType="text"
                        >
                    </android.support.v7.widget.AppCompatEditText>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                      <android.support.v7.widget.RecyclerView
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:id="@+id/comment_list"
                          >

                      </android.support.v7.widget.RecyclerView>
                  </LinearLayout>
            <LinearLayout
                android:id="@+id/action_lyt"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="rtl"
                    android:text="@string/action_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    />
                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/action_follow_chkbox"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textDirection="rtl"
                    android:text="@string/follow_chkbox"
                    android:checked="true"
                    />
                <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/action_like_chkbox"
                android:text="@string/like_chkbox"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                android:textDirection="rtl"
                android:checked="false"
                />
                <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/action_comment_chkbox"
                android:text="@string/comment_chkbox"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                android:textDirection="rtl"
                android:checked="false"
                />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/other_lyt"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="rtl"
                    android:text="@string/other_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    />
                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/other_private_chkbox"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textDirection="rtl"
                    android:text="@string/other_private"
                    android:checked="true"
                    />
                    <com.appyvet.materialrangebar.RangeBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/unfollow_rng"
                        app:mrb_rangeBar="false"
                        app:mrb_tickStart="1"
                        app:mrb_tickEnd="20"
                        app:mrb_tickInterval="1"
                        app:mrb_pinRadius="16dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textDirection="rtl"
                        android:id="@+id/unfollow_txt"
                        android:text="@string/other_unfollow"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        />
                <com.appyvet.materialrangebar.RangeBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fetch_rng"
                        app:mrb_rangeBar="false"
                        app:mrb_tickStart="1"
                        app:mrb_tickEnd="10"
                        app:mrb_tickInterval="1"
                        app:mrb_pinRadius="16dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textDirection="rtl"
                        android:id="@+id/fetch_txt"
                        android:text="@string/other_fetch"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
        <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab"
        app:fabSize="normal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:src="@drawable/savefab"
        />
</RelativeLayout>
</LinearLayout>
