<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/activity_login"
    tools:context="ir.alimahmoodvan.getfollower.LoginActivity">
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/pbar"
        android:indeterminate="true"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
     />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_txt_lyt"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/username"
        android:textColorHint="@color/colorWhite"
        app:errorEnabled="true"
        >
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_txt"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            >
        </android.support.v7.widget.AppCompatEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_txt_lyt"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/colorWhite"
        app:errorEnabled="true"
        >
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_txt"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            >
        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_marginTop="24dp"
        android:text="@string/login_btn"
        style="@style/RaisedButton"

        >

    </android.support.v7.widget.AppCompatButton>
</LinearLayout>
